--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  any_link_preview: ^3.0.0
   appwrite: ^8.3.0
+  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.3.2
   flutter_svg: ^2.0.4
   fpdart: ^0.5.0
+  image_picker: ^0.8.7+1
+  timeago: ^3.4.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
