--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.4
   fpdart: ^0.5.0
   image_picker: ^0.8.7+1
+  like_button: ^2.0.5
   timeago: ^3.4.0
 
 dev_dependencies:
